@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.5.6
 ------------------------
+ o change the default value of grid.ppm.from to 2
+   (was 5 before) [2014-03-05 Wed]
  o 
 
 CHANGES IN VERSION 1.5.5
